--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" 
-  "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-	<head>
- 		<!--<meta name="discription" content="">	-->
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link href="pal-sanych.github.io/PS5.ico" rel="icon" type="image/x-icon" />
-		<link href="pal-sanych.github.io/PS5.ico" rel="shortcut icon" type="image/x-icon" />
-  		<title>Песочница</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+ 		<!--<meta name="discription" content="&#1055;&#1088;&#1072;&#1074;&#1076;&#1086;&#1083;&#1102;&#1073;&#1080;&#1074;&#1086;&#1077; &#1089;&#1086;&#1086;&#1073;&#1097;&#1077;&#1089;&#1090;&#1074;&#1086;">	-->
+		
+  		<link href="Pal-Sanych.github.io/PS5.ico" rel="icon" type="image/x-icon">
+		<link href="Pal-Sanych.github.io/PS5.ico" rel="shortcut icon" type="image/x-icon">
+  		<title>&#1055;&#1077;&#1089;&#1086;&#1095;&#1085;&#1080;&#1094;&#1072;</title>
  	</head>
 
  	<body bgcolor="teal">
-		<h1>Заголовок</h1>
-  		<!-- Комментарий -->
-  		<p>Первый абзац.</p>
-		<p>Второй абзац.</p>
-
-	</body>
-</html>
+		<h1>banana</h1>
+  		<!-- &#1050;&#1086;&#1084;&#1084;&#1077;&#1085;&#1090;&#1072;&#1088;&#1080;&#1081; -->
+  		<p>&#1055;&#1077;&#1088;&#1074;&#1099;&#1081; &#1072;&#1073;&#1079;&#1072;&#1094;.</p>
+		<p>&#1042;&#1090;&#1086;&#1088;&#1086;&#1081; &#1072;&#1073;&#1079;&#1072;&#1094;.</p>
+                <img src="http://www.pngimg.com/upload/banana_PNG835.png" alt="&#1089;&#1072;&#1073;&#1078;">
+                 
+	
+</body></html>
