--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 	<p></p>
 	<p></p>
 	<img src="http://www.pngimg.com/upload/banana_PNG835.png" alt="banana">
-                 
+	
+	<script type="application/javascript">
+   	alert('Hello, World!');
+   </script>
+
 	
 </body>
 </html>
