--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
    	alert('Hello, World!');
    </script>
 
+	<div id="#conteiner"></div>
+
+	<script type="text/javascript">
+	$("documend").ready(function(){
+	   $("#container").load("http://time100.ru/");
+	});
+	</script>
 	
 </body>
 </html>
