--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  		<!--<meta name="discription" content="">	-->
 		
-  		<link href="Pal-Sanych.github.io/PS5.ico" rel="icon" type="image/x-icon">
-		<link href="Pal-Sanych.github.io/PS5.ico" rel="shortcut icon" type="image/x-icon">
+  		<link href="PS5.ico" rel="icon" type="image/x-icon">
+		<link href="PS5.ico" rel="shortcut icon" type="image/x-icon">
   		<title>Pal-Sanych</title>
  </head>
-
  <body>
  <!--bgcolor="teal"-->
-	<iframe src="https://ecosociology.org/" scrolling="yes" width=800p height=500p> 
+	<iframe src="http://ecosociology.org/" scrolling="yes" width=800 height=500> 
 	firefuck
 	</iframe>	
+	
+
 <!--	
 	<style type="text/css">
 	iframe{
