--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<iframe src="https://stallman.org/" width=150 height=100> 
 	firefuck
 	</iframe>
-	<iframe src="http://www.opennet.ru/opennews/art.shtml?num=6889" width=800 height=400> 
+	<iframe src="https://www.opennet.ru/opennews/art.shtml?num=6889" width=800 height=400> 
 	firefuck
 	</iframe>
 
